# gfxminimath

./: CMakeLists.txt  README.md  appveyor.yml
include/gfxminimath/: gfxminimath.h
src/: CMakeLists.txt  dummy.cpp  gfxminimath.cpp
tests/: test_example.cpp
